更改启动参数
Signed-off-by: QianLong <642321251@qq.com>